--- a/styles/main.css
+++ b/styles/main.css
@@ -1,5 +1,6 @@
 body{
   background: rgb(255, 255, 255);
+
 }
 h1{
   color: rgb(255, 255, 255)
@@ -19,6 +20,16 @@ h1{
   margin-left: 355px;
 }
 
+h2{
+  text-align: left;
+  margin-left: 200px;
+  margin-top: 20px;
+  font-size: 16px;
+  font-family: 'poppins';
+  font-weight: bold;
+  color: #95b230;
+
+}
 
 /* Fond du gadget de la barre de recherche */
 .recherche_p {
@@ -27,7 +38,13 @@ display: block;
 margin-left: 190px;
 }
 
+p{
+  color: rgb(0, 0, 0);
+  margin-right: 150px;
+  font-size: 14px;
+  font-family: 'poppins'
 
+}
 ul{
   list-style-type: none;
 }
@@ -71,15 +88,20 @@ border-color: #95b230;
 
 
 .video {
+position: relative;
 text-align: center;
-margin-left:auto; margin-right: auto;
-margin-top: 50px;
+margin-left:150px;
+ margin-right: auto;
+float: left;
+width: 700px;
+margin-top: 70px;
 }
 
 
 .recherche_p{
   display: block;
 }
+
 
 .logo{
   margin-left: 12px;
@@ -90,6 +112,9 @@ margin left: auto;
 margin-right: auto;
 }
 
+.texte{
+  margin-top: 80px;
+}
 
 .slide{
 margin-top: 30px;
@@ -107,10 +132,11 @@ section{
 
 
   ul {
+    flex-direction: row
        padding:0;
-       margin-top: 45px;
-margin-left: 355px;
-      list-style-type:none;
+       position: absolute;
+       margin-left: 355px;
+       list-style-type:none;
        font-family: 'poppins'
 
        }
@@ -136,12 +162,10 @@ margin-left: 355px;
 #étapes{
 align-content: center;}
 
-ul{
-
-}
 
 .liste2{
-  margin-top: 60px;
+  margin-top: 100px;
+
 }
 
 
@@ -169,13 +193,4 @@ section{
 #section1{
   display: flex;
   text-align: center;
-}
-
-p{
-  color: rgb(255, 255, 255)
-}
-
-p{
-margin-top: 30px;
-margin-left: 70px;
 }
